Initial SparkleShare setup page. Not complete yet.

--- a/SparkleShare.mw
+++ b/SparkleShare.mw
@@ -1,77 +1,65 @@
 {{InfoBox stack
 |{{InfoBox homepage|http://sparkleshare.org/|header=true}}
 |{{InfoBox wikipedia|SparkleShare}}
-|{{InfoBox github|hbons/SparkleShare}}
 }}
 
-SparkleShare is [[Article description::a cross platform, free, open source, Dropbox-like, git-based collaboration and file sharing tool.]] SparkleShare harnesses the powerful back end of the Git version control system and OpenSSH to provide version controlled backups of each file placed in its repository. The SparkleShare client provides a super simple user interface in the form of a small tray applet.
+SparkleShare is a cross platform, open source, Dropbox-like, file synchronization tool. SparkleShare harnesses the powerful back end of the Git version control system and OpenSSH to provide version controlled backups of every file placed in its repository. The SparkleShare client provides a simple user interface in the form of a small tray applet.
 
-SparkleShare is broken into two components: a ''client'' and a ''host''. This article will help the user install and configure both components in order to obtain a working SparkleShare environment.
+SparkleShare is broken into two components: a client and a host. This article will help the user install and configure both the client and the host in order to have a fully working environment.
 
-== USE Configuration ==
+==Features and Limitations==
+Version control is built into SparkleShare which makes it perfect for the self-hosting of text-based files, office documents, and small images such as PNG files. Since Git does not do well handling binary or compressed files, SparkleShare does not make a good “full computer” backup utility. It also does not do well handling binary files or files in semi-compressed/compressed states. Most modern media files such as .OGG, .MP3, .AAC, .MPEG, .JPEGS, etc. are already in semi-compressed/compressed states and should try to be avoided in SparkleShare projects.
 
-There are currently no USE flags for SparkleShare.
+==Future Features==
+There are plans to include [https://github.com/Mighty-M/git-bin git-bin] in SparkleShare which would greatly improve it's capabilities in dealing with large files in binary and compressed format, however the implementation of git-bit into SparkleShare is yet to be complete. The developer may never complete this feature; if it's something you think you could help with visit the [https://github.com/hbons/SparkleShare SparkleShare GitHub page].
 
-== Features and limitations ==
+==SparkleShare Client==
 
-Version control is built into SparkleShare which makes it perfect for the self-hosting of text-based files, office documents, and small image files. Since Git does not do well handling binary or compressed files, SparkleShare does '''not''' make a good full computer backup utility. It also does not do well handling binary files or files in semi-compressed or compressed states. Most modern media files (such as {{Path|.ogg}}, {{Path|.mp3}}, {{Path|.aac}}, {{Path|.mpeg}}, {{Path|.jpeg}}, etc.) are already in semi-compressed or compressed states and should not be added to SparkleShare repositories.
+===Building and Installation===
+Install {{Package|net-misc/sparkleshare}}:
 
-=== Future ===
+{{RootCmd| emerge -a net-misc/sparkleshare
+}}
 
-There are plans to include [https://github.com/Mighty-M/git-bin git-bin] in SparkleShare which would greatly improve its capabilities in dealing with binary and any files in compressed states, however the implementation of git-bin into SparkleShare is yet to be complete. The developer may never integrate this feature.
 
-== Client ==
+==SparkleShare Host==
 
-As with most packages in the Portage Tree, SparkleShare can be installed with a simple emerge command. Emerging {{Package|net-misc/sparkleshare}} will install both the host and the client SparkleShare components:
+===Installation===
+Installing the Host side of SparkleShare requires more shell configuration than the client side. In order to setup a host you'll need the following dependencies:
 
-{{Emerge|net-misc/sparkleshare}}
 
-If the current PC is a client, the installation is now complete. The client should now show up in the desktop environment's list of installed programs. After it is started a small applet should appear in the panel.
+The first step is to download the Dazzle script from the [https://github.com/hbons/Dazzle Dazzle GitHub page].
 
-For host installation and configuration continue reading.
+{{RootCmd|curl https://raw.github.com/hbons/Dazzle/master/dazzle.sh \ --output /usr/local/bin/dazzle
+}}
 
-== Host ==
 
-Installing the SparkleShare ''host'' requires a bit more configuration than the client.
+Next make the script executable by using the <code>chmod +x</code> command
+{{RootCmd|chmod +x /usr/local/bin/dazzle
 
-The first step in host configuration is to download the Dazzle script from the [https://github.com/hbons/Dazzle Dazzle GitHub page]. This will require the use of web browser or a command line download utility (<tt>curl</tt> or <tt>wget</tt>).
+After that you'll need to run the <code>dazzle</code> command to setup your project.
+{{RootCmd|dazzle setup
+}}
 
-{{Note|In order to use {{c|wget}} command install the {{Package|net-misc/wget}} package. This package should come installed on Gentoo systems by default.}}
+Add each user's SSH key to the SparkleShare host by using dazzle's <code>link</code> command. You could either put the users SSH key on a USB drive or you could transfer the ssh key using ssh. It doesn't matter how you transfer the key, as long as you can enter it into the <code>dazzle link</code> command when prompted.
+{{RootCmd|dazzle link
+}}
 
-{{RootCmd|wget <nowiki>https://raw.github.com/hbons/Dazzle/master/dazzle.sh</nowiki> -O /usr/local/bin/dazzle}}
+After you have finished allowing your users to access the SparkleShare service, you will need to create one or more projects. Use the <code>dazzle create</code> command followed by the project name.
+{{RootCmd|dazzle create PROJECT_NAME
+}}
 
-Next make the script executable by using {{c|chmod}}:
+That's it! You've setup your host!
 
-{{RootCmd|chmod +x /usr/local/bin/dazzle}}
+==See also==
+[[Owncloud]]
 
-Update the system profile to make the Dazzle script located in {{Path|/usr/local/bin}} visible as a system command:
-{{RootCmd|source /etc/profile}}
 
-After that run {{c|dazzle setup}} to setup the SparkleShare ''host'':
+==External Resources==
+[http://sparkleshare.org/ Official SparkleShare Website]
 
-{{RootCmd|dazzle setup}}
+[https://github.com/hbons/SparkleShare Official SparkleShare GitHub Page]
 
-Add each user's SSH key to the SparkleShare host by using {{c|dazzle link}}.
-
-The SparkleShare ''client'' will generate a SSH key pair combination on the client system. Right click the notification tray icon to copy the SSH key to the clipboard. It is then possible to use {{c|ssh}} to run the {{c|dazzel link}} on the host system, and the ssh key can be copied into the {{Path|dazzel}} script.
-
-Alternatively the users' SSH key can be put on a USB drive or transferred using {{c|scp}}. Ultimately it does not matter how the key is transfers, as long as it can be entered on the host when {{Path|dazzle}} prompts.
-
-{{RootCmd|dazzle link}}
-
-After the user has been granted access to the SparkleShare service on the host system one more more projects will need to be created. Each project is new a repository. Use {{c|dazzle create}} on the ''host'' followed by the project name to generate the project(s):
-
-{{RootCmd|dazzle create PROJECT_NAME}}
-
-{{Note|Run the above step for as many projects as desired.}}
-
-That is it! The host has successfully been configured!
-
-== See also ==
-
-* {{See also|Dropbox}}
-* {{See also|Obnam}}
-* {{See also|Owncloud}}
+[http://en.wikipedia.org/wiki/SparkleShare SparkleShare at Wikipedia]
 
 [[Category:Web application]]
-[[Category:Backup]]
